# Cost-of-living-sg-insights

./: .gitignore  README.md  devenv.nix  pyproject.toml
dashboard/: app.py  package.json  pyproject.toml  utils.py
dashboard/assets/: callbacks.js  global.css  sidebar.js  tailwind.js  toggleSidebar.js
dashboard/components/: app_shell.py  footer.py  graphWrapper.py  hoverCard.py  sidebar.py  textComponents.py  topBar.py
dashboard/dashboard/: __main__.py  run.py
dashboard/dashboard/pages/: global.py
dashboard/data/: cpi_bubble_map.py  cpi_vs_gdp_bubble_chart.py  cpi_vs_gst_line_bar.py  gdp_bubble_map.py  healthcare_cpi_breakdown.py  healthcare_cpi_vs_gross_monthly_income.py  income_tax_heatmap.py  income_tax_rates_step_line.py  iras_tax_collection_bar.py  life_expectancy_vs_healthcare_cpi.py  monthly_expenditure_donut.py  necessities_cpi_breakdown.py  necessities_cpi_vs_income.py  percentage_change_in_healthcare_cpi_and_income.py  property_tax_collection_annual_value_bubble.py  property_tax_rates_step_line.py
dashboard/data/charts/: cpi_vs_gdp_bubble_chart.json  cpi_vs_gst_line_bar.json  income_tax_heatmap.json  income_tax_rates_step_line.json  iras_tax_collection_bar.json  life_expectancy_vs_healthcare_cpi.json  necessities_cpi_breakdown.json  property_tax_collection_annual_value_bubble.json  property_tax_rates_step_line.json
dashboard/pages/: conclusion.py  global.py  healthcare.py  home.py  introduction.py  necessities.py  not_found_404.py  taxes.py
dashboard/text/: globalText.py  healthcareText.py  home_text.py  necessitiesText.py  taxesText.py
data/charts/: cpi_bubble_map.json  gdp_bubble_map.json  healthcare_cpi_breakdown.json  healthcare_cpi_vs_gross_monthly_income.json  monthly_expenditure_donut.json  necessities_cpi_vs_income.json  percentage_change_in_healthcare_cpi_and_income.json
data/datasets/: sg_cpi_annual.json  sg_gross_income_id.json  sg_gst_id.json  sg_hdb_annual_value_tax.json  sg_income_tax_rates.json  sg_individual_income_tax.json  sg_life_expectancy_id.json  sg_property_tax_rates_id.json
education/: education.ipynb
fetcher/: pyproject.toml
fetcher/fetcher/: __main__.py  fetch.py  run.py
global/: global.ipynb
healthcare/: healthcare.ipynb
necessities/: necessity.ipynb
notebooks/: pyproject.toml
parser/: pyproject.toml
parser/parser/: __init__.py  types.py
python/: pyproject.toml
taxes/: tax.ipynb
