[project]
name = "ict305-project-dashboard"
version = "0.1.0"
description = "An investigation of the economic viability of living in Singapore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "plotly>=6.0.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "flask>=3.0.3",
]

[project.scripts]
dashboard = "dashboard.app:main"

[tool.uv]
package = true

[tool.uv.sources]
ict305-project-parser = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]
